Use random utils for deck shuffling.